mysql-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  labels:
    name: mysql-pod-lbl
spec:
  containers:
  - name: mysql
    image: mysql:latest
    ports:
    - name: mysql
      containerPort: 3306
      protocol: TCP
