nginx_2_run.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod-1
  labels:
    name: nginx-pod-1-lbl
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - name: nginx
      containerPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod-2
  labels:
    name: nginx-pod-2-lbl
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - name: nginx
      containerPort: 80
      protocol: TCP
